# Hanoi-Towers

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Hanoi-Towers.pro  README.md  app-ads.txt  doxygen.conf  runSnap.sh
Deploy/: Client.json  Server.json
Docs/De/: ChangeLog.md  Description.md
Docs/En/: ChangeLog.md  Description.md
Docs/Es/: ChangeLog.md  Description.md
Docs/Fr/: ChangeLog.md  Description.md
Docs/Ja/: ChangeLog.md  Description.md
Docs/Pl/: ChangeLog.md  Description.md
Docs/Ru/: ChangeLog.md  Description.md
Docs/Tr/: ChangeLog.md  Description.md
Docs/Ua/: ChangeLog.md  Description.md
Docs/Zh/: ChangeLog.md  Description.md
HanoiTowers/: CMakeLists.txt
HanoiTowers/Protockol/: CMakeLists.txt
HanoiTowers/Protockol/src/: fixworldrequest.cpp  fixworldrequest.h  gamestate.cpp  gamestate.h  hanoierrorcodes.h  hanoitowersprotockol.cpp  hanoitowersprotockol.h  hanoitowersprotockol_global.h  onlinerating.cpp  onlinerating.h  profiledata.cpp  profiledata.h  user.h  useravatar.cpp  useravatar.h  userdata.cpp  userdata.h  userdatarequest.cpp  userdatarequest.h  userpreview.cpp  userpreview.h  world.cpp  world.h  worldupdate.cpp  worldupdate.h
HanoiTowers/Server/: CMakeLists.txt  HanoiTowersServerResurces.qrc  hanoiserver.cpp  hanoiserver.h  hanoiservice.cpp  hanoiservice.h  main.cpp
HanoiTowers/Server/sql/: database.sql
HanoiTowers/Terminal/: CMakeLists.txt  HanoiTowersServer.pro  main.cpp  terminal.cpp  terminal.h
HanoiTowers/client/: About.qml  Background.qml  CMakeLists.txt  Fog.qml  Game.qml  Help.qml  HelpPage.qml  PopUp.qml  SwitchLvl.qml  Tower.qml  activityhandler.cpp  activityhandler.h  backEnd.cpp  backEnd.h  dataconverter.cpp  dataconverter.h  gamestate.h  hanoi_towers.pro  hanoiclient.cpp  hanoiclient.h  hanoidb.cpp  hanoidb.h  hanoiimageprovider.cpp  hanoiimageprovider.h  hanoitowers.cpp  hanoitowers.h  localrecordstable.cpp  localrecordstable.h  localuser.cpp  localuser.h  main.cpp  main.qml  onlinestatusqml.cpp  onlinestatusqml.h  plate.qml  qml.qrc  recordlistmodel.cpp  recordlistmodel.h  recordsproxymodel.cpp  recordsproxymodel.h  (+11 more)
HanoiTowers/client/admod/: AdMobInterstitialAndroid.qml
HanoiTowers/client/android/: AndroidManifest.xml  AndroidManifest.xml.in  build.gradle  build.gradle.in  gradle.properties  local.properties
HanoiTowers/client/android/res/values/: libs.xml
HanoiTowers/client/android/src/com/quasarapp/androidtools/: MainActivity.java
HanoiTowers/client/base/: BaseButton.qml  BaseRadioButton.qml  BaseText.qml  BoseCheckBox.qml  Theme.qml  utils.js
HanoiTowers/client/languages/: de.ts  en.qm  en.ts  es.ts  fr.ts  ja.qm  ja.ts  pl.ts  ru.qm  ru.ts  tr.qm  tr.ts  ua.qm  ua.ts  uk.ts  zh.ts
HanoiTowers/client/menu/: AdLoadScrean.qml  CheatCard.qml  Config.qml  GameStateWidget.qml  LocalUsersTable.qml  MainMenu.qml  Premium.qml  PremiumLoader.qml  PremiumThanks.qml  ToolBar.qml  ToolBarPage.qml  UserTableDelegate.qml  UserTableRow.qml  UserView.qml  UsersTable.qml  World.qml
HanoiTowers/client/sql/: database.sql
HanoiTowersServer/: CMakeLists.txt  HanoiTowersServer.pro  hanoiserver.cpp  hanoiserver.h  hanoiservice.cpp  hanoiservice.h  main.cpp  snakeserver.cpp  snakeserver.h
HanoiTowersTerminal/: CMakeLists.txt  main.cpp  terminal.cpp  terminal.h
hanoi_towers/: CMakeLists.txt  Help.qml  PopUp.qml  SwitchLvl.qml  Tower.qml  about.qml  backEnd.cpp  backEnd.h  game.qml  gamestate.cpp  gamestate.h  hanoi_towers.pro  hanoiclient.cpp  hanoiclient.h  import.qml  main.cpp  main.qml  plate.qml  profiledata.cpp  profiledata.h  qml.qrc
hanoi_towers/android/: AndroidManifest.xml  build.gradle  gradle.properties~
hanoi_towers/android/res/values/: libs.xml
hanoi_towers/base/: BaseButton.qml  BaseRadioButton.qml  BaseText.qml  BoseCheckBox.qml  SupportPage.qml  Theme.qml  utils.js
hanoi_towers/languages/: en.ts  ja.qm  ja.ts  ru.qm  ru.ts  tr.qm  tr.ts  ua.qm  ua.ts
hanoi_towers/menu/: Config.qml  Header.qml  MainMenu.qml  ToolBar.qml  UserTableRow.qml  UsersTable.qml
installer/: installer.pri  installer.pro
installer/config/: config.xml  configLinux.xml  configWin.xml  controlScript.js  style.css
installer/deploy/: deploy.pro  deployFiles.pri  targetList.pri
setup/gui/: HanoiTower.desktop
snap/: snapcraft.yaml
snap/forDumpBuild/: snapcraft.yaml
snap/gui/: Hanoi-Tower.desktop  HanoiTower.desktop
snap/plugins/: x-qtbuilder.py
snap/static/: snapcraft.yaml
source/: AndroidManifest.xml  PopUp.qml  SwitchLvl.qml  Tower.qml  about.qml  backEnd.cpp  backEnd.h  game.qml  hanoi_towers.pro  hanoi_towers.pro.user.266659c  main.cpp  main.qml  plate.qml  qml.qrc  res.qrc  saver.cpp  saver.h
source/android/: AndroidManifest.xml
source/base/: BaseText.qml  BoseCheckBox.qml  Theme.qml  utils.js
source/languages/: en.ts  ja.qm  ja.ts  ru.qm  ru.ts  tr.qm  tr.ts
source/menu/: Config.qml  Header.qml  MainMenu.qml
